<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">가계부</string>
    <string name="purchase_name">상품 이름</string>
    <string name="purchase_price">상품 가격</string>
    <string name="purchase_date">구입 날짜</string>
    <string name="submit">완료</string>
    <string name="cancel">취소</string>
    <string name="add">추가</string>
    <string name="del_all">모두 삭제</string>
    <string name="alert">알림</string>
    <string name="confirm">확인</string>
    <string name="delete">삭제</string>
    <string name="back">뒤로</string>
    <string name="input_name">상품 이름을 입력해 주세요.</string>
    <string name="input_price">상품 가격을 입력해 주세요.</string>
    <string name="year">년</string>
    <string name="month">월</string>
    <string name="day">일</string>
    <string name="input_day">일자를 올바르게 입력해주세요</string>
    <string name="input_month">월을 올바르게 입력해주세요</string>
    <string name="input_year">년도를 올바르게 입력해주세요</string>
    <string name="no_item">추가된 내용이 없습니다</string>
    <string name="item_name">상품 이름</string>
    <string name="item_price">상품 가격</string>
    <string name="choice">선택하세요</string>

</resources>