<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchase_name" />

    <EditText
        android:id="@+id/purchase_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" >

        <requestFocus />

    </EditText>
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchase_price" />

    <EditText
        android:id="@+id/purchase_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchase_date" />

    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
        
        <EditText
	        android:id="@+id/year"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="4"
	        android:inputType="number"
	        android:hint="2012" />
        
        <TextView
	        android:id="@+id/textView4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/year" />

	    <EditText
	        android:id="@+id/month"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="2"
	        android:inputType="number"
	        android:hint="1" />
	    
	    <TextView
	        android:id="@+id/textView5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/month" />
	
	    <EditText
	        android:id="@+id/day"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="2"
	        android:inputType="number"
	        android:hint="1" />
	    
	    <TextView
	        android:id="@+id/textView6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/day" />
    </LinearLayout>

    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    
	    <Button
	        android:id="@+id/submit_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/submit" />
	
	    <Button
	        android:id="@+id/cancel_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/cancel" />
    
    </LinearLayout>

</LinearLayout>